# patter

./: .env  .gitignore  Cargo.toml  LICENSE
.cargo/: config.toml
src/: data.rs  errors.rs  lib.rs  main.rs  mod.rs  tests.rs  utils.rs
src/api/: data.rs
src/providers/: mod.rs  pinata.rs  web3Storage.rs  web3_storage.rs
tests/: cli.rs
