[package]
name = "patter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0.164", features = ["derive"]}
serde_derive = "1.0.164"
serde_json = "1.0.99"
reqwest = { version = "0.11.18", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
walkdir = "2.3.2"
failure = { version = "0.1.8" }
log = "0.4.14"
derive_builder = "0.12.0"
async-trait = "0.1.72"
tokio-test = "0.4.2"
